RESOLVED FIXED244014
REGRESSION (252960@main, WPT resync): [ macOS Debug ] imported/w3c/web-platform-tests/html/semantics/document-metadata/the-style-element/style-load-after-mutate.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=244014
Summary REGRESSION (252960@main, WPT resync): [ macOS Debug ] imported/w3c/web-platfo...
Karl Rackler
Reported 2022-08-16 17:52:19 PDT
Description: imported/w3c/web-platform-tests/html/semantics/document-metadata/the-style-element/style-load-after-mutate.html The test is a flaky failure after the WPT resync at 252960@main. REPRODUCTION STEPS I can reproduce this on 252960@main, but am unable to reproduce it earlier. Command: run-webkit-tests --debug --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 -f --no-retry imported/w3c/web-platform-tests/html/semantics/document-metadata/the-style-element/style-load-after-mutate.html Result: 15 tests ran as expected, 3 didn't (32 didn't run): Unexpected flakiness: text-only failures (1) imported/w3c/web-platform-tests/html/semantics/document-metadata/the-style-element/style-load-after-mutate.html [ Pass Failure ] History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fdocument-metadata%2Fthe-style-element%2Fstyle-load-after-mutate.html&limit=50000&platform=mac&style=debug&recent=false Diff: --- /Volumes/Data/worker/Apple-BigSur-Debug-AppleSilicon-WK1-Tests/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/document-metadata/the-style-element/style-load-after-mutate-expected.txt +++ /Volumes/Data/worker/Apple-BigSur-Debug-AppleSilicon-WK1-Tests/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/document-metadata/the-style-element/style-load-after-mutate-actual.txt @@ -1,3 +1,5 @@ -PASS The 'load' event on the style element should still fire after mutation +Harness Error (TIMEOUT), message = null +TIMEOUT The 'load' event on the style element should still fire after mutation Test timed out +
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-16 17:52:35 PDT
Karl Rackler
Comment 2 2022-08-16 17:57:45 PDT
I have marked this test as a flaky failure while this issue is investigated.
EWS
Comment 3 2022-08-16 18:03:00 PDT
Test gardening commit 253496@main (ee3946a1daad): <https://commits.webkit.org/253496@main> Reviewed commits have been landed. Closing PR #3389 and removing active labels.
Chris Dumez
Comment 4 2022-11-08 14:34:57 PST
EWS
Comment 5 2022-11-10 08:59:10 PST
Committed 256535@main (a5047de4052a): <https://commits.webkit.org/256535@main> Reviewed commits have been landed. Closing PR #6265 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.